# eIRC

./: Cargo.toml  LICENSE
src/: config.rs  eirc.rs  irc.rs  main.rs
