[package]
name = "eIRC"
version = "0.0.1"
authors = ["Stefan Dietrich<Stefl1504@gmx-topmail.de>",
           "Josko Nikolic<josko.nikolic1@gmail.com>"]

[dependencies]
log = "0.3"
toml = "0.1"
libc = "0.2.2"
bufstream = "0.1.1"
env_logger = "0.3.2"
rustc-serialize = "0.3"
shared_library = "0.1.2"

[[bin]]
name = "eirc"
